# start-opencv

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: global_options.cmake
data/detection/: .gitignore
docs/: build_opencv_from_source_macos.md  build_opencv_from_source_ubuntu.md  cpp_cmds_stitching.sh  cpp_cmds_stitching_try_cuda.sh  cpp_stitching_cmds.sh  get_output.sh  get_sysinfo.sh  getting_started.md  install_gcc54.sh
docs/cpp/: getting_started.md  images_stitching.md  object_detection_yolo.md
docs/python/: getting_started.md  image_processing.md  images_stitching.md  object_detection_yolo.md
scripts/: detectron2_predictor.py  detectron2_seg_threshold.py  get_models_yolo.sh  threshold_hsv.py
src/cpp/: CMakeLists.txt  CPPLINT.cfg
src/cpp/camera/: CMakeLists.txt  camera.cc  canny.cc  kinect.cc
src/cpp/common/: camera.h  logger.h
src/cpp/detection/: CMakeLists.txt  object_detection_yolo.cpp
src/cpp/stitching/: 1_stitcher.cc  2_1_features.cc  2_features_finding.cc  2_features_finding2.cc  3_images_matching.cc  4_rotation_estimation.cc  5_images_warping.cc  6_exposure_compensation.cc  7_seam_estimation.cc  8_image_blenders.cc  8_image_blenders2.cc  CMakeLists.txt
src/cpp/stitching/tutorial/: stitching_detailed.cpp
src/python/calib3d/: stereo2depth.py
src/python/camera/: canny.py  kinect.py
src/python/common/: camera.py  draw.py
src/python/detection/: object_detection_yolo.py
src/python/processing/: contours.py  gradients.py  gradients2.py  laplace.py  scharr.py  sobel.py
src/python/stitching/: features_finding.py  images_matching.py  overlap_finding.py
